# ANSIEsc2HTML

./: .gitignore  ANSIEsc2HTML.pro  ANSI_SGR2HTML.pro  CMakeLists.txt  README.md  TODO.txt
.github/workflows/: build-and-test.yml
bench/: CMakeLists.txt  bench.pro  learn.ansi  main.cpp
src/: ansi_esc2html.cpp  ansi_esc2html.h  ansi_sgr2html.cpp  ansi_sgr2html.h
tests/: tests.cpp
